Fix break in lists for PDF Manual

--- a/assets/manual/pdf.css
+++ b/assets/manual/pdf.css
@@ -37,6 +37,9 @@ a {
   color: #2d86fe;
 }
 
+li {
+  page-break-inside: avoid;
+}
 
 table {
   width: 100%;
